Small code refactoring
Small code refactoring