@@ -7,17 +7,17 @@ import transform.TextToRule;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class LoadRules {
+    private LoadRules(){}
     public static List<Rule<Box>> mapToRules(List<String> lines) {
         if(lines == null || lines.isEmpty()){
-            return Collections.<Rule<Box>>emptyList();
+            return Collections.emptyList();
         }
 
         return lines.stream()
                 .map(ThrowingFunction.uncheck(LoadRules::transform))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Rule<Box> transform(String line) throws Exception{
